fix : 권한 Jobs로 통일
- Test에도 동작하게끔 수정